--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="wd-quote">"Me gustaria ser mas sociable pero mirar feo me sale como del alma "</div>
 </div>
 <div class="wd-flex"><div class="wd-imm"><img src="https://i.ibb.co/16RvXQQ/Dise-o-sin-t-tulo-1.png"></div><div><div class="wd-lastname"><b>Yaaz </b> xatspace</div><div class="wd-datos">
-<span><b>Name:</b><i>Jazmin</i></span>
+<span><b>Name:</b><i>Yazmin</i></span>
 <span><b>Apodo:</b><i>Yaz</i></span>
 <span><b>Country:</b><i>Mexico</i></span>
 <span><b>Married:</b><i>soltera</i></span>
